feat(jekyll): no style theme
dark mode

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,6 @@
         <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
       {% endfor %}
     {% endif %}
+<script src="{{ '/assets/js/dark-mode-toggle.js' | relative_url }}"></script>
   </body>
 </html>
