--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,23 @@
+---
+layout: compress
+---
+
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: "en" }}">
-  {%- include head.html -%}
-  <body a="{{ site.theme_config.appearance | default: "auto" }}">
-    <main class="page-content" aria-label="Content">
-      <div class="w">
-        {{ content }}
-      </div>
-    </main>
+<html lang="en">
+    <head>
+        {% include main/head.html %}
+    </head>
 
-    {%-if site.goat_counter and jekyll.environment == "production"-%}
-      {%-include goat_counter.html-%}
-    {%-endif-%}
+    <body>
+        <div class="wrapper" id="blep">
+            {% include main/header.html %}
 
-    {% if page.custom_js %}
-      {% for js_file in page.custom_js %}
-        <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
-      {% endfor %}
-    {% endif %}
-<script src="{{ '/assets/js/dark-mode-toggle.js' | relative_url }}"></script>
-  </body>
+            {{ content }}
+
+            {% include main/footer.html %}
+        </div>
+
+        {% include externals/scripting.html %}
+        {% include externals/google_analytics.html %}
+    </body>
 </html>
