--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,11 @@
 layout: default
 ---
 
-{%-include back_link.html-%}
 
-<article>
-  <p class="post-meta">
-    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
-  </p>
-  
-  <h1>{{ page.title }}</h1>
+{% include post.html post=page %}
 
-  {{ content }}
-</article>
+{% if site.author.disqus %}
+    {% include externals/disqus.html %}
+{% endif %}
+
+{% include post/related.html %}
