--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -8,7 +8,7 @@ permalink: /404.html
     <div class="post-wrapper">
         <h1>404</h1>
         <span class="subheading">{{ page.description }}</span>
-        <a class="btn" href="{{ site.nav.home }}">Back to home</a>
+        <a href="{{ site.nav.home }}" class="btn">Back to home</a>
     </div>
 </header>
 
