--- a/_includes/layouts/head.html
+++ b/_includes/layouts/head.html
@@ -1,63 +1,61 @@
 <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta content="{{ site.author }}" name="author">
+    <meta name="author" content="{{ site.author }}">
     {% if layout.type == "post" %}
-    <meta content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" name="description">
-    <meta content="{% if page.tags.size > 0 %}{% for tag in page.tags  %}{{ tag }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}"
-          name="keywords">
+    <meta name="description" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta name="keywords"
+        content="{% if page.tags.size > 0 %}{% for tag in page.tags  %}{{ tag }}{% if forloop.last == false %}, {% endif %}{% endfor %}{% endif %}">
     {% if page.next.url %}
-    <meta content="{{ page.next.url | relative_url }}" property="og:previous_url">
+    <meta property="og:previous_url" content="{{ page.next.url | relative_url }}">
     {% endif %}
     {% if page.previous.url %}
-    <meta content="{{ page.previous.url | relative_url }}" property="og:next_url">
+    <meta property="og:next_url" content="{{ page.previous.url | relative_url }}">
     {% endif %}
     {% else %}
-    <meta content="{{ site.description }}" name="description">
-    <meta content="{{ site.keyword }}" name="keywords">
+    <meta name="description" content="{{ site.description }}">
+    <meta name="keywords" content="{{ site.keyword }}">
     {% endif %}
-    <meta content="{{ site.formats.time }}" property="post-date-format">
+    <meta property="post-date-format" content="{{ site.formats.time }}">
     {% case site.formats.time %}
     {% when 0 %}
-    <meta content="{{ page.date | date: '%Y-%m-%d %H:%M:%S %z' }}" property="post-date"/>
+    <meta property="post-date" content="{{ page.date | date: '%Y-%m-%d %H:%M:%S %z' }}" />
     {% when 1 %}
-    <meta content="{{ page.date | date_to_rfc822 }}" property="post-date"/>
+    <meta property="post-date" content="{{ page.date | date_to_rfc822 }}" />
     {% else %}
-    <meta content="{{ page.date | date: '%Y年%-m月%-d日 %H:%M:%S %z'  }}" property="post-date"/>
+    <meta property="post-date" content="{{ page.date | date: '%Y年%-m月%-d日 %H:%M:%S %z'  }}" />
     {% endcase %}
     {% if site.calendar %}
-    <meta content="{{ site.calendar.scale | default: 'year' }}" property="calendar-scale"/>
-    <meta content="{{ site.calendar.scheme | default: 'null' }}" property="calendar-scheme"/>
-    <meta content="{{ site.calendar.color | default: 'null' }}" property="calendar-color"/>
+    <meta property="calendar-scale" content="{{ site.calendar.scale | default: 'year' }}" />
+    <meta property="calendar-scheme" content="{{ site.calendar.scheme | default: 'null' }}" />
+    <meta property="calendar-color" content="{{ site.calendar.color | default: 'null' }}" />
     {% endif %}
     <!-- Open Graph -->
-    <meta content="{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}"
-          property="og:title">
-    <meta content="website" property="og:type">
-    <meta content="{{ page.url | prepend: site.url }}" property="og:url">
-    <meta content="{{ site.baseurl }}" property="og:baseurl">
-    <meta content="{{ site.description }}" property="og:description">
-    <meta content="{{ site.title }}" property="og:site_name">
-    <meta content="{{ site.gray }}" property="og:gray">
-    <meta content="{{ lang }}" property="og:lang">
+    <meta property="og:title"
+        content="{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ page.url | prepend: site.url }}">
+    <meta property="og:baseurl" content="{{ site.baseurl }}">
+    <meta property="og:description" content="{{ site.description }}">
+    <meta property="og:site_name" content="{{ site.title }}">
+    <meta property="og:gray" content="{{ site.gray }}">
+    <meta property="og:lang" content="{{ lang }}">
     {% if site.alivetime %}
-    <meta content="{{ site.alivestart }}" name="alivestart">
+    <meta name="alivestart" content="{{ site.alivestart }}">
     {% endif %}
     {% if site.google_search %}
-    <meta content="{{ site.google_search }}" name="google-site-verification"/>
+    <meta name="google-site-verification" content="{{ site.google_search }}" />
     {% endif %}
-    <meta content="{{ site.pwa.color }}" name="theme-color"/>
-    <link href="{{ " rel="manifest"
-    /manifest.json" | prepend: site.baseurl }}" />
-    <link href="{{ " rel="apple-touch-icon"
-    /assets/img/touch/apple-touch-icon.png" | prepend: site.baseurl }}" />
-    <link href="{{ site.favicon | prepend: site.baseurl }}" rel="Shortcut Icon">
-    <link href="{{ site.favicon | prepend: site.baseurl }}" rel="icon" type="image/x-icon"/>
-    <link href="{{ site.favicon | prepend: site.baseurl }}" rel="bookmark" type="image/x-icon"/>
-    <link async href="https://cdn.jsdelivr.net/npm/normalize.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont/style.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown-light.min.css" rel="stylesheet">
+    <meta name="theme-color" content="{{ site.pwa.color }}" />
+    <link rel="manifest" href="{{ "/manifest.json" | prepend: site.baseurl }}" />
+    <link rel="apple-touch-icon" href="{{ "/assets/img/touch/apple-touch-icon.png" | prepend: site.baseurl }}" />
+    <link rel="Shortcut Icon" href="{{ site.favicon | prepend: site.baseurl }}">
+    <link rel="icon" href="{{ site.favicon | prepend: site.baseurl }}" type="image/x-icon" />
+    <link rel="bookmark" href="{{ site.favicon | prepend: site.baseurl }}" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.min.css" async>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lxgw-wenkai-screen-webfont/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown-light.min.css">
     {% if layout.type == "post" %}
     {% include plugins/others/social_css.html%}
     {% include plugins/markdown/fancybox_css.html %}
@@ -67,7 +65,6 @@
     {% include plugins/markdown/prism_css.html %}
     {% include plugins/comments/waline_css.html %}
     {% include plugins/search/docsearch_css.html %}
-    <link href="{{ " rel="stylesheet"
-    /assets/css/app.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/css/app.min.css" | prepend: site.baseurl }}">
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 </head>
