--- a/_includes/layouts/pageNav.html
+++ b/_includes/layouts/pageNav.html
@@ -1,19 +1,18 @@
 <nav class="pagination">
-    <input id="total_pages" type="hidden" value="{{ paginator.total_pages }}">
-    <input id="current_pages" type="hidden" value="{{ paginator.page }}">
-    <input id="base_url" type="hidden" value="{{ "/blog/" | prepend: site.baseurl }}">
+    <input type="hidden" id="total_pages" value="{{ paginator.total_pages }}">
+    <input type="hidden" id="current_pages" value="{{ paginator.page }}">
+    <input type="hidden" id="base_url" value="{{ "/blog/" | prepend: site.baseurl }}">
     <div class="page-links">
         {% if paginator.previous_page %}
-        {% if paginator.previous_page == 1 %}
-        <a href="{{ "/blog/" | prepend: site.baseurl }}/index.html" class="page-link" title="Previous Page">&laquo;</a>
-        {% else %}
-        <a class="page-link" href="{{ site.baseurl }}/blog/page{{ paginator.previous_page }}/index.html"
-           title="Previous Page">&laquo;</a>
-        {% endif %}
+            {% if paginator.previous_page == 1 %}
+            <a href="{{ "/blog/" | prepend: site.baseurl }}/index.html" class="page-link" title="Previous Page">&laquo;</a>
+            {% else %}
+            <a href="{{ site.baseurl }}/blog/page{{ paginator.previous_page }}/index.html" class="page-link" title="Previous Page">&laquo;</a>
+            {% endif %}
         {% endif %}
         <div id="page-link-container"></div>
         {% if paginator.next_page %}
-        <a class="page-link" href="{{ site.baseurl }}/blog/page{{ paginator.next_page }}/index.html">&raquo;</a>
+        <a href="{{ site.baseurl }}/blog/page{{ paginator.next_page }}/index.html" class="page-link">&raquo;</a>
         {% endif %}
     </div>
 </nav>
