--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,13 @@
 <body ontouchstart="">
 {% endif %}
 <!--[if lt IE 10]>
-<div class="alert-danger" role="alert">你的浏览器实在太太太旧了，放学别走，升级完浏览器再说！<a target="_blank"
-                                                                                             class="alert-link"
-                                                                                             href="http://browsehappy.com">立即升级</a>
-</div>
+<div class="alert-danger" role="alert">你的浏览器实在太太太旧了，放学别走，升级完浏览器再说！<a target="_blank" class="alert-link" href="http://browsehappy.com">立即升级</a></div>
 <![endif]-->
 {% if layout.type == "post" %}
 {% if site.gray %}
-<div class="post gray" data-theme="{{ site.theme-color }}" id=all>
+<div id=all class="post gray" data-theme="{{ site.theme-color }}">
     {% else %}
-    <div class="post" data-theme="{{ site.theme-color }}" id="all">
+    <div id="all" class="post" data-theme="{{ site.theme-color }}">
         {% endif %}
         {% assign locales = site.data.locales[lang] %}
         {% assign post = locales.post %}
@@ -25,9 +22,9 @@
         <div class="alert-tip" id="no-next">{{ post.tips.right }}</div>
         {% else %}
         {% if site.gray %}
-        <div class="gray" data-theme="{{ site.theme-color }}" id=all>
+        <div id=all class="gray" data-theme="{{ site.theme-color }}">
             {% else %}
-            <div data-theme="{{ site.theme-color }}" id="all">
+            <div id="all" data-theme="{{ site.theme-color }}">
                 {% endif %}
                 {% endif %}
                 <input id="nm-switch" type="hidden" value="{{ site.nightMode }}">
@@ -38,7 +35,7 @@
             {% include plugins/markdown/mermaid_block.html %}
             <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-            <script async src="https://cdn.jsdelivr.net/npm/lazysizes/lazysizes.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/lazysizes/lazysizes.min.js" async></script>
             {% if layout.type == "post" %}
             {% include layouts/metainfo.html %}
             {% include plugins/others/social_js.html %}
@@ -50,7 +47,7 @@
                 /**
                  * Better Scroll Experience
                  */
-                function scrollToAdjust(id) {
+                function scrollToAdjust(id){
                     var element = document.getElementById(id);
                     var headerOffset = 90;
                     var elementPosition = element.getBoundingClientRect().top;
