--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,8 +3,7 @@ title: Tags
 layout: default
 ---
 
-<div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }}"
-     data-theme="{{ site.theme-color }}">
+<div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }}" data-theme="{{ site.theme-color }}">
     <h2>TAGS</h2>
 </div>
 
@@ -23,7 +22,7 @@ layout: default
             {% for i in (1..max_tag_count) reversed %}
             {% for tag in site.tags %}
             {% if tag[1].size == i %}
-            <a class="tag" href="{{ page.url }}#{{ tag[0] }}">
+            <a href="{{ page.url }}#{{ tag[0] }}" class="tag">
                 {{ tag[0] }}<sup>{{ i }}</sup>
             </a>
             {% endif %}
