--- a/_includes/plugins/others/social_js.html
+++ b/_includes/plugins/others/social_js.html
@@ -2,26 +2,13 @@
 <script>
     socialShare('.social-share', {
         sites: [
-            { % for i in site.social - share - items %
-    }
-    '{{ i }}'
-    {%
-        if forloop.last == false %
-    }
-    ,
-    {%
-        endif %
-    }
-    {%
-        endfor %
-    }
+            {% for i in site.social-share-items %}
+    '{{ i }}'{% if forloop.last == false %}, {% endif %}
+    {% endfor %}
     ],
-    wechatQrcodeTitle: "分享到微信朋友圈",
-        wechatQrcodeHelper
-    :
-    '<p>扫码后点击右上角</p><p>将本文分享至朋友圈</p>'
+    "分享到微信朋友圈",
+        wechatQrcodeHelper: '<p>扫码后点击右上角</p><p>将本文分享至朋友圈</p>'
     })
-    ;
     $("a.social-share-icon").each(function () {
         $(this).attr("aria-label", $(this).attr("class").split(' ')[1])
     });
