--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -4,8 +4,7 @@ description: "Sorry, Page Not Found :("
 permalink: /404.html
 ---
 
-<header class="g-banner np-banner {{ site.postPatterns | prepend: 'post-pattern-' }}"
-        data-theme="{{ site.theme-color }}">
+<header class="g-banner np-banner {{ site.postPatterns | prepend: 'post-pattern-' }}" data-theme="{{ site.theme-color }}">
     <div class="post-wrapper">
         <h1>404</h1>
         <span class="subheading">{{ page.description }}</span>
