--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -42,19 +42,19 @@ cover: https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?w=1600&q=900
 </p>
 
 <div id="archive-heatmap">
-    <div class="calendar-top" id="ex-ghDay2">
-        <a aria-label="Calendar heatmap prev" class="button" href="#" id="ex-ghDay-prev2">
-            <svg aria-hidden="true" class="icon">
+    <div id="ex-ghDay2" class="calendar-top">
+        <a id="ex-ghDay-prev2" class="button" href="#" aria-label="Calendar heatmap prev">
+            <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-left"></use>
             </svg>
         </a>
-        <a aria-label="Calendar heatmap next" class="button" href="#" id="ex-ghDay-next2">
-            <svg aria-hidden="true" class="icon">
+        <a id="ex-ghDay-next2" class="button" href="#" aria-label="Calendar heatmap next">
+            <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-right"></use>
             </svg>
         </a>
-        <a aria-label="Calendar heatmap today" class="button" href="#" id="ex-ghDay-today2">
-            <svg aria-hidden="true" class="icon">
+        <a id="ex-ghDay-today2" class="button" href="#" aria-label="Calendar heatmap today">
+            <svg class="icon" aria-hidden="true">
                 <use xlink:href="#icon-rotate"></use>
             </svg>
         </a>
@@ -78,7 +78,7 @@ cover: https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?w=1600&q=900
           <span class="archives-date">
             {% case site.formats.time %}
             {% when 0 %}
-              {{ post.date | date: "%Y-%m-%d" }} 
+              {{ post.date | date: "%Y-%m-%d" }}
             {% when 1 %}
               {{ post.date | date_to_string }}
             {% else %}
@@ -100,10 +100,10 @@ cover: https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?w=1600&q=900
     </ul>
     <h3 class="year">{{ post.date | date: '%Y' }}
         <span class="icon-item">
-            <svg aria-hidden="true" class="icon animal">
+            <svg class="icon animal" aria-hidden="true">
               <use xlink:href="#icon-{{ ssyears[animal] }}"></use>
             </svg>
-            <svg aria-hidden="true" class="icon dz">
+            <svg class="icon dz" aria-hidden="true">
               <use xlink:href="#icon-{{ ssyears[animal]}}_dz"></use>
             </svg>
           </span>
@@ -116,7 +116,7 @@ cover: https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?w=1600&q=900
           <span class="archives-date">
             {% case site.formats.time %}
             {% when 0 %}
-              {{ post.date | date: "%m-%d" }} 
+              {{ post.date | date: "%m-%d" }}
             {% when 1 %}
               {{ post.date | date_to_string }}
             {% else %}
