--- a/_includes/plugins/others/social_js.html
+++ b/_includes/plugins/others/social_js.html
@@ -3,12 +3,12 @@
     socialShare('.social-share', {
         sites: [
             {% for i in site.social-share-items %}
-    '{{ i }}'{% if forloop.last == false %}, {% endif %}
-    {% endfor %}
-    ],
-    "分享到微信朋友圈",
+            '{{ i }}'{% if forloop.last == false %}, {% endif %}
+            {% endfor %}
+        ],
+        wechatQrcodeTitle: "分享到微信朋友圈",
         wechatQrcodeHelper: '<p>扫码后点击右上角</p><p>将本文分享至朋友圈</p>'
-    })
+    });
     $("a.social-share-icon").each(function () {
         $(this).attr("aria-label", $(this).attr("class").split(' ')[1])
     });
