--- a/_includes/layouts/sidebar.html
+++ b/_includes/layouts/sidebar.html
@@ -31,7 +31,7 @@
                     </a>
                 </div>
             </div>
-            {% if site.sns.size > 0 %}
+            {% if site.sns.show %}
             <ul id="sns-links" class="sns-links">
                 {% for s in site.sns %}
                 <li>
