--- a/_includes/plugins/others/pwa.html
+++ b/_includes/plugins/others/pwa.html
@@ -4,14 +4,8 @@
             console.log("An active service worker found, no need to register");
         } else {
             // Register the service worker
-            navigator.serviceWorker
-                .register("{{ " / sw.js
-            " | prepend: site.baseurl }}", {
-                scope: "{{ " / " | prepend: site.baseurl }}"
-            }
-        )
-        .
-            then(function (reg) {
+            navigator.serviceWorker.register("{{ "/sw.js" | prepend: site.baseurl }}", {scope: "{{ " / " | prepend: site.baseurl }}"})
+        .then(function (reg) {
                 console.log("Service worker has been registered for scope: " + reg.scope);
             });
         }
