--- a/_layouts/manifest.html
+++ b/_layouts/manifest.html
@@ -5,23 +5,23 @@
 "short_name": {{ site.pwa.short_name | smartify | jsonify }},
 "icons": [
 {
-"src": "{{ "/assets/img/touch/android-chrome-192x192.png" | prepend: site.baseurl }}",
+"src": "{{ site.pwa.icon192 | prepend: site.baseurl }}",
 "sizes": "192x192",
 "type": "image/png"
 },
 {
-"src": "{{ "/assets/img/touch/android-chrome-512x512.png" | prepend: site.baseurl }}",
+"src": "{{ site.pwa.icon512 | prepend: site.baseurl }}",
 "sizes": "512x512",
 "type": "image/png"
 },
 {
-"src": "{{ "/assets/img/touch/android-chrome-maskable-192x192.png" | prepend: site.baseurl }}",
+"src": "{{ site.pwa.icon_maskable_192 | prepend: site.baseurl }}",
 "sizes": "192x192",
 "type": "image/png",
 "purpose": "maskable"
 },
 {
-"src": "{{ "/assets/img/touch/android-chrome-maskable-512x512.png" | prepend: site.baseurl }}",
+"src": "{{ site.pwa.icon_maskable_512 | prepend: site.baseurl }}",
 "sizes": "512x512",
 "type": "image/png",
 "purpose": "maskable"
