--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -146,7 +146,7 @@ type: post
         <div class="bio">
             <p>{{ site.bio }}</p>
         </div>
-        {% if site.sns.size > 0 %}
+        {% if site.sns.show %}
         <ul class="sns-links">
             {% for s in site.sns %}
             <li>
